// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests author view 1`] = `
<ArticleWrapper
  showSidebar={true}
>
  <CommonHelmet
    description="description"
    ogType="article"
    title="【隠れミッキー】title"
  />
  <ForwardRef(Stack)
    spacing={2}
  >
    <ShareButtons
      description="description"
      title="title"
      url="http://localhost/"
    />
    <ForwardRef(Divider) />
    <ForwardRef(Link)
      component="div"
    >
      <IconAndText
        align="right"
        iconComponent={<Memo />}
        iconPosition="left"
        onClick={[MockFunction]}
        text="編集"
        to="/map/edit/1"
      />
    </ForwardRef(Link)>
    <ForwardRef(Stack)
      alignItems="center"
      direction="row"
      justifyContent="flex-start"
      spacing={1}
    >
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Avatar)
          src="no-icon.jpg"
          sx={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      </NonStyleLink>
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Typography)
          color="gray"
          sx={
            Object {
              "textDecoration": "underline",
            }
          }
        >
          Axel
        </ForwardRef(Typography)>
      </NonStyleLink>
    </ForwardRef(Stack)>
    <DynamicAlignedText
      component="h2"
      sx={
        Object {
          "wordBreak": "break-all",
        }
      }
      variant="h4"
    >
      title
    </DynamicAlignedText>
    <ForwardRef(Typography)
      color="gray"
      component="div"
      sx={
        Object {
          "textDecoration": "underline",
        }
      }
    >
      <IconAndText
        align="left"
        iconComponent={<Memo />}
        iconPosition="left"
        text="隠れミッキー"
        to="/categories/1"
      />
    </ForwardRef(Typography)>
    <ForwardRef(Box)
      sx={
        Object {
          "color": "gray",
          "textAlign": "right",
        }
      }
    >
      <ForwardRef(Typography)>
        投稿日 2022/4/1
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        更新日 2022/5/1
      </ForwardRef(Typography)>
    </ForwardRef(Box)>
    <ForwardRef(Divider) />
    <ForwardRef(Typography)
      fontSize={18}
      whiteSpace="pre-wrap"
    >
      description
    </ForwardRef(Typography)>
    <AdsenseIns
      adFormat="fluid"
      adLayout="in-article"
      adSlot="undefined"
    />
    <ForwardRef(Divider) />
    <IconAndText
      component="h3"
      iconComponent={
        <MyIcon
          variant="map-marker"
        />
      }
      iconPosition="left"
      text="地図"
      variant="h5"
    />
    <AreaNames
      areaNames={
        Array [
          "シー",
        ]
      }
    />
    <NonStyleLink
      to="/"
    >
      <ParkMap
        disabled={true}
        height={300}
        initCenter={
          Object {
            "areaNames": Array [
              "シー",
            ],
            "lat": 0,
            "lng": 0,
            "markerId": 1,
            "numberOfPublicArticles": Object {
              "eachCategory": Array [
                1,
                2,
                1,
              ],
              "total": 4,
            },
            "park": "S",
          }
        }
        initZoom={3}
        park="S"
      >
        <MapMarker
          autoOpen={false}
          draggable={false}
          position={
            Object {
              "lat": 0,
              "lng": 0,
            }
          }
          variant="red"
          zIndexOffset={0}
        />
      </ParkMap>
    </NonStyleLink>
    <ForwardRef(Typography)
      align="right"
    >
      <NonStyleLink
        to="/"
      >
        <ForwardRef(Button)>
          <IconAndText
            component="span"
            iconComponent={<Memo />}
            iconPosition="left"
            text="全体マップで確認する"
          />
        </ForwardRef(Button)>
      </NonStyleLink>
    </ForwardRef(Typography)>
    <ForwardRef(Divider) />
    <ForwardRef(Grid)
      container={true}
      justifyContent="space-between"
      pb={5}
    >
      <ForwardRef(Grid)
        item={true}
      >
        <ForwardRef(Box)
          textAlign="right"
        >
          <ForwardRef(LoadingButton)
            color="warning"
            loading={true}
            onClick={[Function]}
            startIcon={<Memo />}
            variant="outlined"
          >
            お気に入り追加
          </ForwardRef(LoadingButton)>
        </ForwardRef(Box)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
      >
        <ForwardRef(Box)
          textAlign="right"
        >
          <ForwardRef(LoadingButton)
            loading={false}
            onClick={[Function]}
            startIcon={<Memo />}
            variant="outlined"
          />
        </ForwardRef(Box)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
    <ShareButtons
      description="description"
      title="title"
      url="http://localhost/"
    />
  </ForwardRef(Stack)>
  <ForwardRef(Box)
    mb={5}
    mt={8}
    textAlign="center"
  >
    <NonStyleLink
      to="/map/new"
    >
      <Image
        src="recommend.png"
        width="300px"
      />
    </NonStyleLink>
  </ForwardRef(Box)>
  <AdsenseIns
    adFormat="auto"
    adSlot="undefined"
    fullWidthResponsive={true}
  />
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests basic 1`] = `
<ArticleWrapper
  showSidebar={true}
>
  <CenterSpinner />
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests draft 1`] = `
<ArticleWrapper
  showSidebar={true}
>
  <CommonHelmet
    description="description"
    ogType="article"
    title="【隠れミッキー】title"
  />
  <ForwardRef(Stack)
    spacing={2}
  >
    <ForwardRef(Alert)
      severity="info"
    >
      この記事は下書きです。あなただけが閲覧できます。
    </ForwardRef(Alert)>
    <ForwardRef(Divider) />
    <ForwardRef(Stack)
      alignItems="center"
      direction="row"
      justifyContent="flex-start"
      spacing={1}
    >
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Avatar)
          src="no-icon.jpg"
          sx={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      </NonStyleLink>
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Typography)
          color="gray"
          sx={
            Object {
              "textDecoration": "underline",
            }
          }
        >
          Axel
        </ForwardRef(Typography)>
      </NonStyleLink>
    </ForwardRef(Stack)>
    <DynamicAlignedText
      component="h2"
      sx={
        Object {
          "wordBreak": "break-all",
        }
      }
      variant="h4"
    >
      title
    </DynamicAlignedText>
    <ForwardRef(Typography)
      color="gray"
      component="div"
      sx={
        Object {
          "textDecoration": "underline",
        }
      }
    >
      <IconAndText
        align="left"
        iconComponent={<Memo />}
        iconPosition="left"
        text="隠れミッキー"
        to="/categories/1"
      />
    </ForwardRef(Typography)>
    <ForwardRef(Box)
      sx={
        Object {
          "color": "gray",
          "textAlign": "right",
        }
      }
    >
      <ForwardRef(Typography)>
        投稿日 2022/5/1
      </ForwardRef(Typography)>
    </ForwardRef(Box)>
    <ForwardRef(Divider) />
    <ForwardRef(Typography)
      fontSize={18}
      whiteSpace="pre-wrap"
    >
      description
    </ForwardRef(Typography)>
    <ForwardRef(Divider) />
    <IconAndText
      component="h3"
      iconComponent={
        <MyIcon
          variant="map-marker"
        />
      }
      iconPosition="left"
      text="地図"
      variant="h5"
    />
    <AreaNames
      areaNames={
        Array [
          "シー",
        ]
      }
    />
    <NonStyleLink
      to="/"
    >
      <ParkMap
        disabled={true}
        height={300}
        initCenter={
          Object {
            "areaNames": Array [
              "シー",
            ],
            "lat": 0,
            "lng": 0,
            "markerId": 1,
            "numberOfPublicArticles": Object {
              "eachCategory": Array [
                1,
                2,
                1,
              ],
              "total": 4,
            },
            "park": "S",
          }
        }
        initZoom={3}
        park="S"
      >
        <MapMarker
          autoOpen={false}
          draggable={false}
          position={
            Object {
              "lat": 0,
              "lng": 0,
            }
          }
          variant="red"
          zIndexOffset={0}
        />
      </ParkMap>
    </NonStyleLink>
    <ForwardRef(Typography)
      align="right"
    >
      <NonStyleLink
        to="/"
      >
        <ForwardRef(Button)>
          <IconAndText
            component="span"
            iconComponent={<Memo />}
            iconPosition="left"
            text="全体マップで確認する"
          />
        </ForwardRef(Button)>
      </NonStyleLink>
    </ForwardRef(Typography)>
    <ForwardRef(Divider) />
  </ForwardRef(Stack)>
  <ForwardRef(Box)
    mb={5}
    mt={8}
    textAlign="center"
  >
    <NonStyleLink
      to="/map/new"
    >
      <Image
        src="recommend.png"
        width="300px"
      />
    </NonStyleLink>
  </ForwardRef(Box)>
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests draft with same created & updated 1`] = `
<ArticleWrapper
  showSidebar={true}
>
  <CommonHelmet
    description="description"
    ogType="article"
    title="【隠れミッキー】title"
  />
  <ForwardRef(Stack)
    spacing={2}
  >
    <ForwardRef(Alert)
      severity="info"
    >
      この記事は下書きです。あなただけが閲覧できます。
    </ForwardRef(Alert)>
    <ForwardRef(Divider) />
    <ForwardRef(Stack)
      alignItems="center"
      direction="row"
      justifyContent="flex-start"
      spacing={1}
    >
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Avatar)
          src="no-icon.jpg"
          sx={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      </NonStyleLink>
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Typography)
          color="gray"
          sx={
            Object {
              "textDecoration": "underline",
            }
          }
        >
          Axel
        </ForwardRef(Typography)>
      </NonStyleLink>
    </ForwardRef(Stack)>
    <DynamicAlignedText
      component="h2"
      sx={
        Object {
          "wordBreak": "break-all",
        }
      }
      variant="h4"
    >
      title
    </DynamicAlignedText>
    <ForwardRef(Typography)
      color="gray"
      component="div"
      sx={
        Object {
          "textDecoration": "underline",
        }
      }
    >
      <IconAndText
        align="left"
        iconComponent={<Memo />}
        iconPosition="left"
        text="隠れミッキー"
        to="/categories/1"
      />
    </ForwardRef(Typography)>
    <ForwardRef(Box)
      sx={
        Object {
          "color": "gray",
          "textAlign": "right",
        }
      }
    >
      <ForwardRef(Typography)>
        投稿日 2022/4/1
      </ForwardRef(Typography)>
    </ForwardRef(Box)>
    <ForwardRef(Divider) />
    <ForwardRef(Typography)
      fontSize={18}
      whiteSpace="pre-wrap"
    >
      description
    </ForwardRef(Typography)>
    <ForwardRef(Divider) />
    <IconAndText
      component="h3"
      iconComponent={
        <MyIcon
          variant="map-marker"
        />
      }
      iconPosition="left"
      text="地図"
      variant="h5"
    />
    <AreaNames
      areaNames={
        Array [
          "シー",
        ]
      }
    />
    <NonStyleLink
      to="/"
    >
      <ParkMap
        disabled={true}
        height={300}
        initCenter={
          Object {
            "areaNames": Array [
              "シー",
            ],
            "lat": 0,
            "lng": 0,
            "markerId": 1,
            "numberOfPublicArticles": Object {
              "eachCategory": Array [
                1,
                2,
                1,
              ],
              "total": 4,
            },
            "park": "S",
          }
        }
        initZoom={3}
        park="S"
      >
        <MapMarker
          autoOpen={false}
          draggable={false}
          position={
            Object {
              "lat": 0,
              "lng": 0,
            }
          }
          variant="red"
          zIndexOffset={0}
        />
      </ParkMap>
    </NonStyleLink>
    <ForwardRef(Typography)
      align="right"
    >
      <NonStyleLink
        to="/"
      >
        <ForwardRef(Button)>
          <IconAndText
            component="span"
            iconComponent={<Memo />}
            iconPosition="left"
            text="全体マップで確認する"
          />
        </ForwardRef(Button)>
      </NonStyleLink>
    </ForwardRef(Typography)>
    <ForwardRef(Divider) />
  </ForwardRef(Stack)>
  <ForwardRef(Box)
    mb={5}
    mt={8}
    textAlign="center"
  >
    <NonStyleLink
      to="/map/new"
    >
      <Image
        src="recommend.png"
        width="300px"
      />
    </NonStyleLink>
  </ForwardRef(Box)>
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests have added good 1`] = `
<ArticleWrapper
  showSidebar={true}
>
  <CommonHelmet
    description="description"
    ogType="article"
    title="【隠れミッキー】title"
  />
  <ForwardRef(Stack)
    spacing={2}
  >
    <ShareButtons
      description="description"
      title="title"
      url="http://localhost/"
    />
    <ForwardRef(Divider) />
    <ForwardRef(Stack)
      alignItems="center"
      direction="row"
      justifyContent="flex-start"
      spacing={1}
    >
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Avatar)
          src="no-icon.jpg"
          sx={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      </NonStyleLink>
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Typography)
          color="gray"
          sx={
            Object {
              "textDecoration": "underline",
            }
          }
        >
          Axel
        </ForwardRef(Typography)>
      </NonStyleLink>
    </ForwardRef(Stack)>
    <DynamicAlignedText
      component="h2"
      sx={
        Object {
          "wordBreak": "break-all",
        }
      }
      variant="h4"
    >
      title
    </DynamicAlignedText>
    <ForwardRef(Typography)
      color="gray"
      component="div"
      sx={
        Object {
          "textDecoration": "underline",
        }
      }
    >
      <IconAndText
        align="left"
        iconComponent={<Memo />}
        iconPosition="left"
        text="隠れミッキー"
        to="/categories/1"
      />
    </ForwardRef(Typography)>
    <ForwardRef(Box)
      sx={
        Object {
          "color": "gray",
          "textAlign": "right",
        }
      }
    >
      <ForwardRef(Typography)>
        投稿日 2022/4/1
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        更新日 2022/5/1
      </ForwardRef(Typography)>
    </ForwardRef(Box)>
    <ForwardRef(Divider) />
    <ForwardRef(Typography)
      fontSize={18}
      whiteSpace="pre-wrap"
    >
      description
    </ForwardRef(Typography)>
    <AdsenseIns
      adFormat="fluid"
      adLayout="in-article"
      adSlot="undefined"
    />
    <ForwardRef(Divider) />
    <IconAndText
      component="h3"
      iconComponent={
        <MyIcon
          variant="map-marker"
        />
      }
      iconPosition="left"
      text="地図"
      variant="h5"
    />
    <AreaNames
      areaNames={
        Array [
          "シー",
        ]
      }
    />
    <NonStyleLink
      to="/"
    >
      <ParkMap
        disabled={true}
        height={300}
        initCenter={
          Object {
            "areaNames": Array [
              "シー",
            ],
            "lat": 0,
            "lng": 0,
            "markerId": 1,
            "numberOfPublicArticles": Object {
              "eachCategory": Array [
                1,
                2,
                1,
              ],
              "total": 4,
            },
            "park": "S",
          }
        }
        initZoom={3}
        park="S"
      >
        <MapMarker
          autoOpen={false}
          draggable={false}
          position={
            Object {
              "lat": 0,
              "lng": 0,
            }
          }
          variant="red"
          zIndexOffset={0}
        />
      </ParkMap>
    </NonStyleLink>
    <ForwardRef(Typography)
      align="right"
    >
      <NonStyleLink
        to="/"
      >
        <ForwardRef(Button)>
          <IconAndText
            component="span"
            iconComponent={<Memo />}
            iconPosition="left"
            text="全体マップで確認する"
          />
        </ForwardRef(Button)>
      </NonStyleLink>
    </ForwardRef(Typography)>
    <ForwardRef(Divider) />
    <ForwardRef(Grid)
      container={true}
      justifyContent="space-between"
      pb={5}
    >
      <ForwardRef(Grid)
        item={true}
      />
      <ForwardRef(Grid)
        item={true}
      >
        <ForwardRef(Box)
          textAlign="right"
        >
          <ForwardRef(LoadingButton)
            loading={false}
            onClick={[Function]}
            startIcon={<Memo />}
            variant="contained"
          >
            いいね
          </ForwardRef(LoadingButton)>
        </ForwardRef(Box)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
    <ShareButtons
      description="description"
      title="title"
      url="http://localhost/"
    />
  </ForwardRef(Stack)>
  <ForwardRef(Box)
    mb={5}
    mt={8}
    textAlign="center"
  >
    <NonStyleLink
      to="/map/new"
    >
      <Image
        src="recommend.png"
        width="300px"
      />
    </NonStyleLink>
  </ForwardRef(Box)>
  <AdsenseIns
    adFormat="auto"
    adSlot="undefined"
    fullWidthResponsive={true}
  />
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests have liked 1`] = `
<ArticleWrapper
  showSidebar={true}
>
  <CommonHelmet
    description="description"
    ogType="article"
    title="【隠れミッキー】title"
  />
  <ForwardRef(Stack)
    spacing={2}
  >
    <ShareButtons
      description="description"
      title="title"
      url="http://localhost/"
    />
    <ForwardRef(Divider) />
    <ForwardRef(Link)
      component="div"
    >
      <IconAndText
        align="right"
        iconComponent={<Memo />}
        iconPosition="left"
        onClick={[MockFunction]}
        text="編集"
        to="/map/edit/1"
      />
    </ForwardRef(Link)>
    <ForwardRef(Stack)
      alignItems="center"
      direction="row"
      justifyContent="flex-start"
      spacing={1}
    >
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Avatar)
          src="no-icon.jpg"
          sx={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      </NonStyleLink>
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Typography)
          color="gray"
          sx={
            Object {
              "textDecoration": "underline",
            }
          }
        >
          Axel
        </ForwardRef(Typography)>
      </NonStyleLink>
    </ForwardRef(Stack)>
    <DynamicAlignedText
      component="h2"
      sx={
        Object {
          "wordBreak": "break-all",
        }
      }
      variant="h4"
    >
      title
    </DynamicAlignedText>
    <ForwardRef(Typography)
      color="gray"
      component="div"
      sx={
        Object {
          "textDecoration": "underline",
        }
      }
    >
      <IconAndText
        align="left"
        iconComponent={<Memo />}
        iconPosition="left"
        text="隠れミッキー"
        to="/categories/1"
      />
    </ForwardRef(Typography)>
    <ForwardRef(Box)
      sx={
        Object {
          "color": "gray",
          "textAlign": "right",
        }
      }
    >
      <ForwardRef(Typography)>
        投稿日 2022/4/1
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        更新日 2022/5/1
      </ForwardRef(Typography)>
    </ForwardRef(Box)>
    <ForwardRef(Divider) />
    <ForwardRef(Typography)
      fontSize={18}
      whiteSpace="pre-wrap"
    >
      description
    </ForwardRef(Typography)>
    <AdsenseIns
      adFormat="fluid"
      adLayout="in-article"
      adSlot="undefined"
    />
    <ForwardRef(Divider) />
    <IconAndText
      component="h3"
      iconComponent={
        <MyIcon
          variant="map-marker"
        />
      }
      iconPosition="left"
      text="地図"
      variant="h5"
    />
    <AreaNames
      areaNames={
        Array [
          "シー",
        ]
      }
    />
    <NonStyleLink
      to="/"
    >
      <ParkMap
        disabled={true}
        height={300}
        initCenter={
          Object {
            "areaNames": Array [
              "シー",
            ],
            "lat": 0,
            "lng": 0,
            "markerId": 1,
            "numberOfPublicArticles": Object {
              "eachCategory": Array [
                1,
                2,
                1,
              ],
              "total": 4,
            },
            "park": "S",
          }
        }
        initZoom={3}
        park="S"
      >
        <MapMarker
          autoOpen={false}
          draggable={false}
          position={
            Object {
              "lat": 0,
              "lng": 0,
            }
          }
          variant="red"
          zIndexOffset={0}
        />
      </ParkMap>
    </NonStyleLink>
    <ForwardRef(Typography)
      align="right"
    >
      <NonStyleLink
        to="/"
      >
        <ForwardRef(Button)>
          <IconAndText
            component="span"
            iconComponent={<Memo />}
            iconPosition="left"
            text="全体マップで確認する"
          />
        </ForwardRef(Button)>
      </NonStyleLink>
    </ForwardRef(Typography)>
    <ForwardRef(Divider) />
    <ForwardRef(Grid)
      container={true}
      justifyContent="space-between"
      pb={5}
    >
      <ForwardRef(Grid)
        item={true}
      >
        <ForwardRef(Box)
          textAlign="right"
        >
          <ForwardRef(LoadingButton)
            color="warning"
            loading={true}
            onClick={[Function]}
            startIcon={<Memo />}
            variant="contained"
          >
            お気に入り済み
          </ForwardRef(LoadingButton)>
        </ForwardRef(Box)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
      >
        <ForwardRef(Box)
          textAlign="right"
        >
          <ForwardRef(LoadingButton)
            loading={false}
            onClick={[Function]}
            startIcon={<Memo />}
            variant="outlined"
          />
        </ForwardRef(Box)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
    <ShareButtons
      description="description"
      title="title"
      url="http://localhost/"
    />
  </ForwardRef(Stack)>
  <ForwardRef(Box)
    mb={5}
    mt={8}
    textAlign="center"
  >
    <NonStyleLink
      to="/map/new"
    >
      <Image
        src="recommend.png"
        width="300px"
      />
    </NonStyleLink>
  </ForwardRef(Box)>
  <AdsenseIns
    adFormat="auto"
    adSlot="undefined"
    fullWidthResponsive={true}
  />
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests loading 1`] = `
<ArticleWrapper
  showSidebar={true}
>
  <CenterSpinner />
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests with adsense 1`] = `
<ArticleWrapper
  showSidebar={true}
>
  <CommonHelmet
    description="description"
    ogType="article"
    title="【隠れミッキー】title"
  />
  <ForwardRef(Stack)
    spacing={2}
  >
    <ShareButtons
      description="description"
      title="title"
      url="http://localhost/"
    />
    <ForwardRef(Divider) />
    <ForwardRef(Stack)
      alignItems="center"
      direction="row"
      justifyContent="flex-start"
      spacing={1}
    >
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Avatar)
          src="no-icon.jpg"
          sx={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      </NonStyleLink>
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Typography)
          color="gray"
          sx={
            Object {
              "textDecoration": "underline",
            }
          }
        >
          Axel
        </ForwardRef(Typography)>
      </NonStyleLink>
    </ForwardRef(Stack)>
    <DynamicAlignedText
      component="h2"
      sx={
        Object {
          "wordBreak": "break-all",
        }
      }
      variant="h4"
    >
      title
    </DynamicAlignedText>
    <ForwardRef(Typography)
      color="gray"
      component="div"
      sx={
        Object {
          "textDecoration": "underline",
        }
      }
    >
      <IconAndText
        align="left"
        iconComponent={<Memo />}
        iconPosition="left"
        text="隠れミッキー"
        to="/categories/1"
      />
    </ForwardRef(Typography)>
    <ForwardRef(Box)
      sx={
        Object {
          "color": "gray",
          "textAlign": "right",
        }
      }
    >
      <ForwardRef(Typography)>
        投稿日 2022/4/1
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        更新日 2022/5/1
      </ForwardRef(Typography)>
    </ForwardRef(Box)>
    <ForwardRef(Divider) />
    <ForwardRef(Typography)
      fontSize={18}
      whiteSpace="pre-wrap"
    >
      description
    </ForwardRef(Typography)>
    <AdsenseIns
      adFormat="fluid"
      adLayout="in-article"
      adSlot="xxx"
    />
    <ForwardRef(Divider) />
    <IconAndText
      component="h3"
      iconComponent={
        <MyIcon
          variant="map-marker"
        />
      }
      iconPosition="left"
      text="地図"
      variant="h5"
    />
    <AreaNames
      areaNames={
        Array [
          "シー",
        ]
      }
    />
    <NonStyleLink
      to="/"
    >
      <ParkMap
        disabled={true}
        height={300}
        initCenter={
          Object {
            "areaNames": Array [
              "シー",
            ],
            "lat": 0,
            "lng": 0,
            "markerId": 1,
            "numberOfPublicArticles": Object {
              "eachCategory": Array [
                1,
                2,
                1,
              ],
              "total": 4,
            },
            "park": "S",
          }
        }
        initZoom={3}
        park="S"
      >
        <MapMarker
          autoOpen={false}
          draggable={false}
          position={
            Object {
              "lat": 0,
              "lng": 0,
            }
          }
          variant="red"
          zIndexOffset={0}
        />
      </ParkMap>
    </NonStyleLink>
    <ForwardRef(Typography)
      align="right"
    >
      <NonStyleLink
        to="/"
      >
        <ForwardRef(Button)>
          <IconAndText
            component="span"
            iconComponent={<Memo />}
            iconPosition="left"
            text="全体マップで確認する"
          />
        </ForwardRef(Button)>
      </NonStyleLink>
    </ForwardRef(Typography)>
    <ForwardRef(Divider) />
    <ForwardRef(Grid)
      container={true}
      justifyContent="space-between"
      pb={5}
    >
      <ForwardRef(Grid)
        item={true}
      />
      <ForwardRef(Grid)
        item={true}
      >
        <ForwardRef(Box)
          textAlign="right"
        >
          <ForwardRef(LoadingButton)
            loading={false}
            onClick={[Function]}
            startIcon={<Memo />}
            variant="outlined"
          />
        </ForwardRef(Box)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
    <ShareButtons
      description="description"
      title="title"
      url="http://localhost/"
    />
  </ForwardRef(Stack)>
  <ForwardRef(Box)
    mb={5}
    mt={8}
    textAlign="center"
  >
    <NonStyleLink
      to="/map/new"
    >
      <Image
        src="recommend.png"
        width="300px"
      />
    </NonStyleLink>
  </ForwardRef(Box)>
  <AdsenseIns
    adFormat="auto"
    adSlot="xxx"
    fullWidthResponsive={true}
  />
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests with article 1`] = `
<ArticleWrapper
  showSidebar={true}
>
  <CommonHelmet
    description="description"
    ogType="article"
    title="【隠れミッキー】title"
  />
  <ForwardRef(Stack)
    spacing={2}
  >
    <ShareButtons
      description="description"
      title="title"
      url="http://localhost/"
    />
    <ForwardRef(Divider) />
    <ForwardRef(Stack)
      alignItems="center"
      direction="row"
      justifyContent="flex-start"
      spacing={1}
    >
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Avatar)
          src="no-icon.jpg"
          sx={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      </NonStyleLink>
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Typography)
          color="gray"
          sx={
            Object {
              "textDecoration": "underline",
            }
          }
        >
          Axel
        </ForwardRef(Typography)>
      </NonStyleLink>
    </ForwardRef(Stack)>
    <DynamicAlignedText
      component="h2"
      sx={
        Object {
          "wordBreak": "break-all",
        }
      }
      variant="h4"
    >
      title
    </DynamicAlignedText>
    <ForwardRef(Typography)
      color="gray"
      component="div"
      sx={
        Object {
          "textDecoration": "underline",
        }
      }
    >
      <IconAndText
        align="left"
        iconComponent={<Memo />}
        iconPosition="left"
        text="隠れミッキー"
        to="/categories/1"
      />
    </ForwardRef(Typography)>
    <ForwardRef(Box)
      sx={
        Object {
          "color": "gray",
          "textAlign": "right",
        }
      }
    >
      <ForwardRef(Typography)>
        投稿日 2022/4/1
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        更新日 2022/5/1
      </ForwardRef(Typography)>
    </ForwardRef(Box)>
    <ForwardRef(Divider) />
    <ForwardRef(Typography)
      fontSize={18}
      whiteSpace="pre-wrap"
    >
      description
    </ForwardRef(Typography)>
    <AdsenseIns
      adFormat="fluid"
      adLayout="in-article"
      adSlot="undefined"
    />
    <ForwardRef(Divider) />
    <IconAndText
      component="h3"
      iconComponent={
        <MyIcon
          variant="map-marker"
        />
      }
      iconPosition="left"
      text="地図"
      variant="h5"
    />
    <AreaNames
      areaNames={
        Array [
          "シー",
        ]
      }
    />
    <NonStyleLink
      to="/"
    >
      <ParkMap
        disabled={true}
        height={300}
        initCenter={
          Object {
            "areaNames": Array [
              "シー",
            ],
            "lat": 0,
            "lng": 0,
            "markerId": 1,
            "numberOfPublicArticles": Object {
              "eachCategory": Array [
                1,
                2,
                1,
              ],
              "total": 4,
            },
            "park": "S",
          }
        }
        initZoom={3}
        park="S"
      >
        <MapMarker
          autoOpen={false}
          draggable={false}
          position={
            Object {
              "lat": 0,
              "lng": 0,
            }
          }
          variant="red"
          zIndexOffset={0}
        />
      </ParkMap>
    </NonStyleLink>
    <ForwardRef(Typography)
      align="right"
    >
      <NonStyleLink
        to="/"
      >
        <ForwardRef(Button)>
          <IconAndText
            component="span"
            iconComponent={<Memo />}
            iconPosition="left"
            text="全体マップで確認する"
          />
        </ForwardRef(Button)>
      </NonStyleLink>
    </ForwardRef(Typography)>
    <ForwardRef(Divider) />
    <ForwardRef(Grid)
      container={true}
      justifyContent="space-between"
      pb={5}
    >
      <ForwardRef(Grid)
        item={true}
      />
      <ForwardRef(Grid)
        item={true}
      >
        <ForwardRef(Box)
          textAlign="right"
        >
          <ForwardRef(LoadingButton)
            loading={false}
            onClick={[Function]}
            startIcon={<Memo />}
            variant="outlined"
          />
        </ForwardRef(Box)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
    <ShareButtons
      description="description"
      title="title"
      url="http://localhost/"
    />
  </ForwardRef(Stack)>
  <ForwardRef(Box)
    mb={5}
    mt={8}
    textAlign="center"
  >
    <NonStyleLink
      to="/map/new"
    >
      <Image
        src="recommend.png"
        width="300px"
      />
    </NonStyleLink>
  </ForwardRef(Box)>
  <AdsenseIns
    adFormat="auto"
    adSlot="undefined"
    fullWidthResponsive={true}
  />
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests with image 1`] = `
<ArticleWrapper
  showSidebar={true}
>
  <CommonHelmet
    description="description"
    imageUrl="image.jpg"
    ogType="article"
    title="【隠れミッキー】title"
  />
  <ForwardRef(Stack)
    spacing={2}
  >
    <ShareButtons
      description="description"
      title="title"
      url="http://localhost/"
    />
    <ForwardRef(Divider) />
    <ForwardRef(Stack)
      alignItems="center"
      direction="row"
      justifyContent="flex-start"
      spacing={1}
    >
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Avatar)
          src="no-icon.jpg"
          sx={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      </NonStyleLink>
      <NonStyleLink
        to="/users/1"
      >
        <ForwardRef(Typography)
          color="gray"
          sx={
            Object {
              "textDecoration": "underline",
            }
          }
        >
          Axel
        </ForwardRef(Typography)>
      </NonStyleLink>
    </ForwardRef(Stack)>
    <DynamicAlignedText
      component="h2"
      sx={
        Object {
          "wordBreak": "break-all",
        }
      }
      variant="h4"
    >
      title
    </DynamicAlignedText>
    <ForwardRef(Typography)
      color="gray"
      component="div"
      sx={
        Object {
          "textDecoration": "underline",
        }
      }
    >
      <IconAndText
        align="left"
        iconComponent={<Memo />}
        iconPosition="left"
        text="隠れミッキー"
        to="/categories/1"
      />
    </ForwardRef(Typography)>
    <ForwardRef(Box)
      sx={
        Object {
          "color": "gray",
          "textAlign": "right",
        }
      }
    >
      <ForwardRef(Typography)>
        投稿日 2022/4/1
      </ForwardRef(Typography)>
      <ForwardRef(Typography)>
        更新日 2022/5/1
      </ForwardRef(Typography)>
    </ForwardRef(Box)>
    <ForwardRef(Divider) />
    <Image
      src="image.jpg"
      width="full"
    />
    <ForwardRef(Typography)
      fontSize={18}
      whiteSpace="pre-wrap"
    >
      description
    </ForwardRef(Typography)>
    <AdsenseIns
      adFormat="fluid"
      adLayout="in-article"
      adSlot="undefined"
    />
    <ForwardRef(Divider) />
    <IconAndText
      component="h3"
      iconComponent={
        <MyIcon
          variant="map-marker"
        />
      }
      iconPosition="left"
      text="地図"
      variant="h5"
    />
    <AreaNames
      areaNames={
        Array [
          "シー",
        ]
      }
    />
    <NonStyleLink
      to="/"
    >
      <ParkMap
        disabled={true}
        height={300}
        initCenter={
          Object {
            "areaNames": Array [
              "シー",
            ],
            "lat": 0,
            "lng": 0,
            "markerId": 1,
            "numberOfPublicArticles": Object {
              "eachCategory": Array [
                1,
                2,
                1,
              ],
              "total": 4,
            },
            "park": "S",
          }
        }
        initZoom={3}
        park="S"
      >
        <MapMarker
          autoOpen={false}
          draggable={false}
          position={
            Object {
              "lat": 0,
              "lng": 0,
            }
          }
          variant="red"
          zIndexOffset={0}
        />
      </ParkMap>
    </NonStyleLink>
    <ForwardRef(Typography)
      align="right"
    >
      <NonStyleLink
        to="/"
      >
        <ForwardRef(Button)>
          <IconAndText
            component="span"
            iconComponent={<Memo />}
            iconPosition="left"
            text="全体マップで確認する"
          />
        </ForwardRef(Button)>
      </NonStyleLink>
    </ForwardRef(Typography)>
    <ForwardRef(Divider) />
    <ForwardRef(Grid)
      container={true}
      justifyContent="space-between"
      pb={5}
    >
      <ForwardRef(Grid)
        item={true}
      />
      <ForwardRef(Grid)
        item={true}
      >
        <ForwardRef(Box)
          textAlign="right"
        >
          <ForwardRef(LoadingButton)
            loading={false}
            onClick={[Function]}
            startIcon={<Memo />}
            variant="outlined"
          />
        </ForwardRef(Box)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
    <ShareButtons
      description="description"
      title="title"
      url="http://localhost/"
    />
  </ForwardRef(Stack)>
  <ForwardRef(Box)
    mb={5}
    mt={8}
    textAlign="center"
  >
    <NonStyleLink
      to="/map/new"
    >
      <Image
        src="recommend.png"
        width="300px"
      />
    </NonStyleLink>
  </ForwardRef(Box)>
  <AdsenseIns
    adFormat="auto"
    adSlot="undefined"
    fullWidthResponsive={true}
  />
</ArticleWrapper>
`;
